Add create (post) /random_thoughts
  - random_thoughts_controller#create
  - functional tests for post/create
  - Swagger test for successful create 201
  - Swagger test for bad request (400)
  - Skipped Swagger test for 500
  - Refactor as needed
